fix: collapsebtn on titlefragment

--- a/src/components/title-fragment/TitleFragment.module.css
+++ b/src/components/title-fragment/TitleFragment.module.css
@@ -42,6 +42,17 @@
         background-color: #2C6974;
         position: absolute;
         right: -5px;
+        top: -2px;
+        font-size: 1.5em;
+    }
+
+    .CollapseBtnAdmin {
+        width: 40px;
+        height: 40px;
+        border: 2px solid #F5F5F5;
+        background-color: #2C6974;
+        position: absolute;
+        right: -5px;
         top: 15px;
         font-size: 1.5em;
     }
